# ruoyi-rust

./: .gitignore  Cargo.toml  LICENSE  README-code.MD  README.md  README_PERMISSION.md  application-dev.yml  application-prod.yml  application.yml  generator.yml  precautions.md  rouyi-rust.sql  rustfmt.toml  user_agent.yml
liqubase/: master.xml
liqubase/1.0/: abel-lee-2026-03-05-001.xml  abel-lee-2026-03-05-002.xml  abel-lee-2026-03-05-003.xml
macros/: Cargo.toml
macros/src/: lib.rs  trans.rs
mysql-sql/: 2026-03-02.sql  abel-2026-03-05-001.sql
src/: context.rs  error.rs  lib.rs  macros.rs  main.rs  web_data.rs
src/config/: config.rs  global_constants.rs  global_variables.rs  log.rs  mod.rs
src/log/: mod.rs
src/modules/: mod.rs
src/modules/ap/: ap_ap_supplier.sql  ap_product_brand.sql  ap_product_category.sql  ap_product_unit.sql  mod.rs
src/modules/ap/controller/: ap_ap_supplier_controller.rs  ap_product_brand_controller.rs  ap_product_category_controller.rs  ap_product_unit_controller.rs  mod.rs
src/modules/ap/domain/: mod.rs
src/modules/ap/domain/dto/: ap_ap_supplier.rs  ap_product_brand.rs  ap_product_category.rs  ap_product_unit.rs
src/modules/ap/domain/mapper/: ap_ap_supplier.rs  ap_product_brand.rs  ap_product_category.rs  ap_product_unit.rs
src/modules/ap/domain/vo/: ap_ap_supplier.rs  ap_product_brand.rs  ap_product_category.rs  ap_product_unit.rs  mod.rs
src/modules/ap/service/: ap_ap_supplier_service.rs  ap_product_brand_service.rs  ap_product_category_service.rs  ap_product_unit_service.rs  mod.rs
src/modules/code_gen/: mod.rs  readme.md
src/modules/code_gen/controller/: gen_table_controller.rs
src/modules/code_gen/domain/dto/: table.rs
src/modules/code_gen/domain/mapper/: gen_table.rs  gen_table_column.rs
src/modules/code_gen/domain/vo/: table.rs  table_column.rs
src/modules/code_gen/service/: gen_constants.rs  gen_table_column_service.rs  gen_table_service.rs  gen_utils.rs  jinja_utils.rs  mod.rs
src/modules/system/: constants.rs  mod.rs
src/modules/system/controller/: common_controller.rs  mod.rs  sys_auth_controller.rs  sys_config_controller.rs  sys_dept_controller.rs  sys_dict_data_controller.rs  sys_dict_type_controller.rs  sys_menu_controller.rs  sys_notice_controller.rs  sys_post_controller.rs  sys_profile_controller.rs  sys_role_controller.rs  sys_user_controller.rs
src/modules/system/controller/monitor/: mod.rs  server_controller.rs  sys_logininfor_controller.rs  sys_oper_log_controller.rs  sys_user_online_controller.rs
src/modules/system/domain/: mod.rs
src/modules/system/domain/dto/: config.rs  dept.rs  dict_data.rs  dict_type.rs  logininfor.rs  menu.rs  mod.rs  notice.rs  oper_log.rs  post.rs  profile.rs  role.rs  role_menu.rs  user.rs
src/modules/system/domain/mapper/: mod.rs  sys_config.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_logininfor.rs  sys_menu.rs  sys_notice.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_dept.rs  sys_role_menu.rs  sys_trash.rs  sys_user.rs  sys_user_post.rs  sys_user_role.rs
src/modules/system/domain/vo/: config.rs  dept.rs  dict_data.rs  dict_type.rs  jwt.rs  logininfor.rs  menu.rs  mod.rs  notice.rs  oper_log.rs  post.rs  role.rs  sign_in.rs  user.rs
src/modules/system/service/: cache_service.rs  data_scope.rs  dict_utils.rs  hardware.rs  mod.rs  sys_auth_service.rs  sys_config_service.rs  sys_dept_service.rs  sys_dict_data_service.rs  sys_dict_type_service.rs  sys_logininfor_service.rs  sys_menu_service.rs  sys_notice_service.rs  sys_oper_log_service.rs  sys_post_service.rs  sys_role_dept_service.rs  sys_role_menu_service.rs  sys_role_service.rs  sys_sms_service.rs.txt  sys_trash_service.rs  sys_user_online_service.rs  sys_user_post_service.rs  sys_user_role_service.rs  sys_user_service.rs
src/modules/system/service/cache/: cache_mem_service.rs  cache_redis_service.rs  mod.rs
src/token_auth/: log.rs  middleware.rs  mod.rs
src/utils/: address_util.rs  auth.rs  base64.rs  base64.rs.txt  base64.rs.txt2  bool_or_int.rs  date_time_format.rs  excel_utils.rs  file_utils.rs  ip_util.rs  mod.rs  password_encoder.rs  string.rs  validate_utils.rs  validator.rs  web_utils.rs
src/web/: data_scope.rs  log.rs  mod.rs  validator.rs  web_data.rs
src/web/extractors/: ip.rs  mod.rs  user_agent.rs  user_cache.rs
src/web/middleware/: error_handler.rs  jwt_mw.rs  log_mw.rs  mod.rs  panic_catcher.rs
src/web/token/: auth.rs  jwt.rs  mod.rs  permit.rs
template/: readme.txt
template/element-plus/: api.${{module}}.${{businessName}}.js.jinja  form.snap.jinja  query.snap.jinja  rules.snap.jinja  views.${{module}}.${{businessName}}.index.vue.jinja
template/rust/: ${{module}}.${{file_name}}.sql.jinja  ${{module}}.controller.${{file_name}}_controller.rs.jinja  ${{module}}.controller.mod.rs.jinja  ${{module}}.domain.dto.${{file_name}}.rs.jinja  ${{module}}.domain.mapper.${{file_name}}.rs.jinja  ${{module}}.domain.vo.${{file_name}}.rs.jinja  ${{module}}.mod.rs.first.jinja  ${{module}}.mod.rs.jinja  ${{module}}.service.${{file_name}}_service.rs.jinja  ${{module}}.temp.json.jinja  controller.jinja  dto.rs.jinja  mapper.rs.jinja  service.jinja  service_join.snap.jinja  vo.rs.jinja
template/vue/: api.js.jinja  vue3.vue.jinja
tests/: file_local.rs  file_oss.rs  import_from_java_springboot.rs  utf8.rs  validation_test.rs
