[package]
name = "ruoyi-rust"
version = "0.2.0"
authors = ["2537660666@qq.com"]
edition = "2021"

[features]
#add this to enable storage_s3 or cache_redis
default = ["code-gen"]
#oss/s3
storage_s3 = ["aws-config", "aws-sdk-s3"]
#redis
# cache_redis = ["redis"]

code-gen = ["minijinja"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rbs = { version = "4.5" }
rbatis = { version = "4.5", features = [] }
rbdc-mysql = { version = "4.5" }

tokio = { version = "1", features = ["macros"] }
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#log
log = "0.4"
#fast_log enable features = ["lz4", "zip", "gzip"], and edit src/config/log.rs fn choose_packer(),edit application.yml add log_pack_compress: "zip"
fast_log = { version = "1.7" }

axum = { version = "0.8.3", features = ["macros"] }
tower-http = { version = "0.6.1", features = ["fs", "cors", "compression-full"] }
#redis
redis = { version = "0.29.2", features = ["tokio-comp"] }
#jwt
jsonwebtoken = "9.2"
#captcha
captcha = "1.0.0"
#http client,use rust-tls replace to native tls
reqwest = { version = "0.12", features = ["json"] }
#image code
futures-util = "0.3.21"
parking_lot = "0.12.1"
sqlparser = "0.55.0"

serde_yaml = "0.9.33"
merge-yaml-hash = "0.4.0"

aws-config = { version = "1.5.9", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.58.0", features = ["rt-tokio"], optional = true }


#snowflake
rustflake = "0.1"
uuid = { version = "1.2.2", default-features = false, features = ["v4", "fast-rng", "macro-diagnostics"] }
base64 = "0.22.0"
# 系统信息
sysinfo = "0.35.0"
#ByteSize is an utility that easily makes bytes size representation and helps its arithmetic operations.
bytesize = "2.0.1"
user-agent-parser = "0.3.4"



# enc passowrd, like springboot secutiry
bcrypt = "0.17.0"
macros = { path = "macros" }

validator = { version = "0.20.0", features = ["derive"] }
axum-valid = "0.23.0"
http-body-util = "0.1.2"


convert_case = "0.8"
regex = "1.11.1"


minijinja = { version = "2.10.0", optional = true, features = ["custom_syntax","loader"] }
markup_fmt = { version = "0.20.0" }
prettify-js = "0.1.0"
prettyplease = "*"
[build-dependencies]
serde = { version = "1.0", features = ["derive"] }

