[package]
name = "ruoyi-rust"
version = "0.4.0"
authors = ["2537660666@qq.com"]
edition = "2024"

[features]
#add this to enable storage_s3 or cache_redis
default = ["code-gen"]
#oss/s3
storage_s3 = ["aws-config", "aws-sdk-s3"]
#redis
# cache_redis = ["redis"]

code-gen = ["minijinja"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rs-liquibase = { git = "https://github.com/asdtiang/rs-liquibase.git" }
rbs = { version = "4.6.2" }
rbatis = { version = "4.6.14", features = [] }
rbdc-mysql = { version = "4.6.2" }

tokio = { version = "1", features = ["macros"] }
#serde and json
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
#log
log = "0.4"
#fast_log enable features = ["lz4", "zip", "gzip"], and edit src/config/log.rs fn choose_packer(),edit application.yml add log_pack_compress: "zip"
fast_log = { version = "1.7" }

axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "compression-full", "limit"] }
#redis
redis = { version = "1.0.2", features = ["tokio-comp"] }
#jwt
jsonwebtoken = { version = "10.2.0" ,features = ["default","rust_crypto"] }
#captcha
captcha = "1.0.0"
#http client,use rust-tls replace to native tls
reqwest = { version = "0.13.1",features = ["rustls"] }
dashmap = "6.1.0"
once_cell = "0.2.4"
#image code
futures-util = "0.3.21"
parking_lot = "0.12.1"
sqlparser = "0.60.0"

serde_yaml = "0.9.33"
merge-yaml-hash = "0.4.0"

aws-config = { version = "1.5.9", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.58.0", features = ["rt-tokio"], optional = true }


#snowflake
uuid = { version = "1.2.2", default-features = false, features = ["v4", "fast-rng", "macro-diagnostics"] }
# 系统信息
sysinfo = "0.37.0"
#ByteSize is an utility that easily makes bytes size representation and helps its arithmetic operations.
bytesize = "2.0.1"
user-agent-parser = "0.3.4"


# enc passowrd, like springboot secutiry
bcrypt = "0.18.0"
zxcvbn = "3.1.0" #密码强度检测
base64 = "0.22.1"
macros = { path = "macros" }

validator = { version = "0.20.0", features = ["derive"] }
mime = "0.3.17"
thiserror = "2.0.12"

http-body-util = "0.1.3"


convert_case = "0.10.0"
regex = "1.11.1"
#导出成excel
rust_xlsxwriter = "0.92.2"

minijinja = { version = "2.10.0", optional = true, features = ["custom_syntax", "loader"] }
time = { version = "0.3", features = ["formatting", "macros"] }
async-trait = "*"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "mysql"
]}
#markup_fmt = { version = "0.20.0" }
#prettify-js = "0.1.0"
#prettyplease = "*"
#tokio-util = "0.7.13"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }

[alias]
# 运行程序并启用 backtrace
run-trace = ["run", "--", "--color", "always"]
# 运行 release 版本并启用 backtrace
run-release-trace = ["run", "--release", "--", "--color", "always"]

