[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0.100", features = ["full", "derive", "extra-traits","visit-mut","visit"] }
quote = "1.0.40"
proc-macro2 = "1.0"
regex = "1.11.1"